--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
     <h1>Hello</h1>
     <p>This is a test page</p>
     <p>This was added from visual code</p>
+    <p>Visit <a href="pages/secondpage.html">second page</a></p>
     <p> <button type="button" onclick=buttonclick()>Click me!</button></p>
   <script>
 
