--- a/pages/secondpage.html
+++ b/pages/secondpage.html
@@ -19,7 +19,7 @@ layout: default
     <h1>Hello page 2</h1>
     <p>This is a test page</p>
     <p>This was added from visual code</p>
-    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px">Click me!</button></p>
+    <p> <button type="button" onclick=buttonclick()>Klick mich!</button></p>
   <script>
 
     var buttonclick = function()
