--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     <p>This is a test page</p>
     <p>This was added from visual code</p>
     <p>Visit <a href="pages/secondpage.html">second page</a></p>
-    <p> <button type="button" onclick=buttonclick()>Click me!</button></p>
+    <p> <button type="button" onclick=buttonclick()>Klick mich!</button></p>
   <script>
 
     var buttonclick = function()
