--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@ layout: default
     <p>This is a test page</p>
     <p>This was added from visual code</p>
     <p>Visit <a href="pages/secondpage.html">second page</a></p>
-    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Klick mich!</button></p>
+    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Button Click Event</button></p>
+    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Page View</button></p>
+    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >EC Event</button></p>
+
   <script>
 
     var buttonclick = function()
