--- a/index.html
+++ b/index.html
@@ -15,15 +15,28 @@ layout: default
       Welcome
     </title>
   </head>
+  <style>
+    .flex-container {
+      display: flex;
+      background-color: "DognerBLue;"
+    }
+    .flex-container > div {
+      margin: 10px;
+      padding: 20px;
+      font-size: 30px;
+    }
+  </style>
   <body>
     <h1>Hello</h1>
     <p>This is a test page</p>
     <p>This was added from visual code</p>
     <p>Visit <a href="pages/secondpage.html">second page</a></p>
-    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Button Click Event</button></p>
-    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Page View</button></p>
-    <p> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >EC Event</button></p>
-
+    <div class="flex-container">
+    <div><button type="button" onclick=buttonclick() style="height:200px;width:200px" >Button Click Event</button></div>
+    <div> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Page View</button></div>
+    <div> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >EC Event</button></div>
+    </div>
+  </body>
   <script>
 
     var buttonclick = function()
