--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@ layout: default
   <body>
     <h1>Hello</h1>
     <p>This is a test page</p>
-    <p>This was added from visual code</p>
     <p>Visit <a href="pages/secondpage.html">second page</a></p>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
     <div class="flex-container">
     <div><button type="button" onclick=buttonclick() style="height:200px;width:200px" >Button Click Event</button></div>
     <div> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Page View</button></div>
