--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@ layout: default
       padding: 20px;
       font-size: 30px;
     }
+    .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
   </style>
   <body>
     <h1>Hello</h1>
