purchase button rename

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
     <div class="flex-container">
     <div><button type="button" onclick=buttonclick() style="height:200px;width:200px" >Button Click Event</button></div>
     <div> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Page View</button></div>
-    <div> <button type="button" onclick=purchase() style="height:200px;width:200px" >EC Event</button></div>
+    <div> <button type="button" onclick=purchase() style="height:200px;width:200px" >Purchase</button></div>
     </div>
   </body>
   <script>
