--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ layout: default
     }
   </style>
   <body>
+    <nav>
+       <a href="/html/">HTML</a> |
+       <a href="/css/">CSS</a> |
+       <a href="/js/">JavaScript</a> |
+       <a href="/python/">Python</a>
+     </nav>
     <h1>Hello</h1>
     <p>This is a test page</p>
     <p>Visit <a href="pages/secondpage.html">second page</a></p>
