--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@ layout: default
   </style>
   <body>
     <nav>
-       <a href="/html/">HTML</a> |
+       <a href="pages/about_me.html">About Me</a> |
        <a href="/css/">CSS</a> |
        <a href="/js/">JavaScript</a> |
        <a href="/python/">Python</a>
      </nav>
     <h1>Hello</h1>
     <p>This is a test page</p>
-    <p>Visit <a href="pages/secondpage.html">second page</a></p>
     <div class="flex-container">
     <div><button type="button" onclick=buttonclick() style="height:200px;width:200px" >Button Click Event</button></div>
     <div> <button type="button" onclick=buttonclick() style="height:200px;width:200px" >Page View</button></div>
